'Fixed alignment.'

--- a/bountiful-foods/styles/large.css
+++ b/bountiful-foods/styles/large.css
@@ -140,7 +140,9 @@ footer #logo{
 
   .weather{
     display: flex;
-    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+ 
     
     
 
@@ -152,7 +154,7 @@ footer #logo{
     grid-template-columns: 1fr;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
-    margin: 10 px 30px;
+    margin: 10px 10px;
     width: 15%;
     box-shadow: 2px 2px 10px black;
     background: linear-gradient(90deg, rgba(236,235,243,1) 11%, rgba(199,214,214,1) 71%);
